--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
+    <script src="https://kit.fontawesome.com/29cb4d7264.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,6 +13,13 @@
     <header>
         <h1>OhMyFood</h1>
     </header>
+
+    <main>
+        <div class="place">
+            <i class="fas fa-map-marker-alt"></i>
+            <h2>Paris, Belleville</h2>
+        </div>
+    </main>
     
 </body>
 </html>
