--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>OhMyFood</h1>
+        <h1>ohmyfood</h1>
     </header>
 
     <main>
@@ -22,7 +22,7 @@
 
         <section class="search">
             <h2>Réservez le menu qui <br>vous convient</h2>
-            <p>Découvrez des menus d'exception, sélectionnés par nos soins</p>
+            <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins</p>
             <button>Explorer nos restaurants</button>
         </section>
     </main>
