--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins</p>
             <button>Explorer nos restaurants</button>
         </section>
+
+        <section class="operation">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li><i class="fas fa-mobile-alt"></i> Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            </ol>
+
+        </section>
     </main>
     
 </body>
