--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
                 <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
                 <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
+        </section>
+
+        <section class="menus">
+            <h2>Restaurants</h2>
+            <div class="menus__cards">
+                <a href="#" class="card">
+                    <div class="card__img"></div>
+                    <div class="card__description"></div>
+                </a>
+                <a href="#" class="card">
+                    <div class="card__img"></div>
+                    <div class="card__description"></div>
+                </a>
+                <a href="#" class="card">
+                    <div class="card__img"></div>
+                    <div class="card__description"></div>
+                </a>
+                <a href="#" class="card">
+                    <div class="card__img"></div>
+                    <div class="card__description"></div>
+                </a>
+            </div>
 
         </section>
     </main>
