--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
         <section class="menus">
             <h2>Restaurants</h2>
             <div class="menus__cards">
-                <a href="#" class="card">
-                    <div class="card__img"></div>
+                <a href="#" class="card new">
+                    <img class="card__img" src="assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></img>
+                    <div class="card__description"></div>
+                </a>
+                <a href="#" class="card new">
+                    <img class="card__img" src="assets/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée"></img>
                     <div class="card__description"></div>
                 </a>
                 <a href="#" class="card">
-                    <div class="card__img"></div>
+                    <img class="card__img" src="assets/stil-u2Lp8tXIcjw-unsplash.jpg" alt="À la française"></img>
                     <div class="card__description"></div>
                 </a>
                 <a href="#" class="card">
-                    <div class="card__img"></div>
-                    <div class="card__description"></div>
-                </a>
-                <a href="#" class="card">
-                    <div class="card__img"></div>
+                    <img class="card__img" src="assets/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Le délice des sens"></img>
                     <div class="card__description"></div>
                 </a>
             </div>
