--- a/index.html
+++ b/index.html
@@ -40,24 +40,56 @@
             <div class="menus__cards">
                 <a href="#" class="card new">
                     <img class="card__img" src="assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></img>
-                    <div class="card__description"></div>
+                    <div class="card__description">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <i class="far fa-heart"></i>
+                    </div>
                 </a>
                 <a href="#" class="card new">
-                    <img class="card__img" src="assets/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée"></img>
-                    <div class="card__description"></div>
+                    <img class="card__img" src="assets/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></img>
+                    <div class="card__description">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <i class="far fa-heart"></i>
+                    </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card__img" src="assets/stil-u2Lp8tXIcjw-unsplash.jpg" alt="À la française"></img>
-                    <div class="card__description"></div>
+                    <img class="card__img" src="assets/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"></img>
+                    <div class="card__description">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                        <i class="far fa-heart"></i>
+                    </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card__img" src="assets/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Le délice des sens"></img>
-                    <div class="card__description"></div>
+                    <img class="card__img" src="assets/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"></img>
+                    <div class="card__description">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <i class="far fa-heart"></i>
+                    </div>
                 </a>
             </div>
 
         </section>
     </main>
+
+    <footer>
+        <h2>ohmyfood</h2>
+        <p>
+            <i class="fas fa-utensils"></i>
+            Proposer un restaurant
+        </p>
+        <p>
+            <i class="fas fa-hands-helping"></i>
+            Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p>
+            <a href="mailto:robi.escoulen@gmail.com">Contact</a>
+        </p>
+    </footer>
     
 </body>
 </html>
