--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
                 <a href="#" class="card new">
@@ -52,6 +53,7 @@
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
                 <a href="#" class="card">
@@ -60,6 +62,7 @@
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
                 <a href="#" class="card">
@@ -68,6 +71,7 @@
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
             </div>
