--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="menus">
             <h2>Restaurants</h2>
             <div class="menus__cards">
-                <a href="#" class="card new">
+                <a href="./pages/restau-1.html" class="card new">
                     <img class="card__img" src="assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></img>
                     <div class="card__description">
                         <h3>La palette du goût</h3>
