--- a/pages/restau-1.html
+++ b/pages/restau-1.html
@@ -14,10 +14,36 @@
         <h1>ohmyfood</h1>
     </header>
 
-    <img src="../assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+    <div class="photo">
+        <img src="../assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+    </div>
 
     <main>
-        <h2>La palette du goût</h2>
+        <div class="restau__title">
+            <h2>La palette du goût</h2>
+        </div>
+
+        <section class="restau__main">
+            <div class="food">
+                <h3>Entrées</h3>
+                 <div class="food__menu">
+                     <div class="food__item">
+                         <div class="food__item__desc">
+                         <h4>Fricassée d'escargot</h4>
+                         <p>Au piment d'espelette</p>
+                        </div>
+                         <span class="food__price">25€</span>
+                         <div class="food__item--check">check</div>
+                     </div>
+                 </div>
+                 <div class="food__menu"><h3>Plats</h3></div>
+                 <div class="food__menu"><h3>Desserts</h3></div>
+            </div>
+        </section>
+
+
+
+
     </main>
 
 
