check card animation

--- a/pages/restau-1.html
+++ b/pages/restau-1.html
@@ -33,7 +33,9 @@
                          <p>Au piment d'espelette</p>
                         </div>
                          <span class="food__price">25€</span>
-                         <div class="food__item--check">check</div>
+                         <div class="food__item--check">
+                            <i class="fas fa-check"></i>
+                         </div>
                      </div>
                  </div>
                  <div class="food__menu"><h3>Plats</h3></div>
