--- a/pages/restau-1.html
+++ b/pages/restau-1.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="page__restau">
+    <a href="./../index.html">
     <header>
         <h1>ohmyfood</h1>
     </header>
+    </a>
 
     <div class="photo">
         <img src="../assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
@@ -37,38 +39,119 @@
                             <i class="fas fa-check"></i>
                          </div>
                      </div>
+                     <div class="food__item">
+                        <div class="food__item__desc">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire</p>
+                       </div>
+                        <span class="food__price">35€</span>
+                        <div class="food__item--check">
+                           <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="food__item">
+                        <div class="food__item__desc">
+                        <h4>Oeuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de poireaux</p>
+                       </div>
+                        <span class="food__price">20€</span>
+                        <div class="food__item--check">
+                           <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                  </div>
-                 <div class="food__menu"><h3>Plats</h3></div>
-                 <div class="food__menu"><h3>Desserts</h3></div>
-            </div>
-        </section>
+                 <h3>Plats</h3>
+                 <div class="food__menu">
+                     <div class="food__item">
+                         <div class="food__item__desc">
+                         <h4>Filet de boeuf aux herbes</h4>
+                         <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                         <span class="food__price">40€</span>
+                         <div class="food__item--check">
+                            <i class="fas fa-check"></i>
+                         </div>
+                     </div>
+                     <div class="food__item">
+                        <div class="food__item__desc">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <p>À la truffe noire sur sa purée de panais</p>
+                       </div>
+                        <span class="food__price">35€</span>
+                        <div class="food__item--check">
+                           <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="food__item">
+                        <div class="food__item__desc">
+                        <h4>Filet de Turbot</h4>
+                        <p>Aux agrumes</p>
+                       </div>
+                        <span class="food__price">44€</span>
+                        <div class="food__item--check">
+                           <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                </div>
+                <h3>Desserts</h3>
+                <div class="food__menu">
+                    <div class="food__item">
+                        <div class="food__item__desc">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
+                       </div>
+                        <span class="food__price">18€</span>
+                        <div class="food__item--check">
+                           <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="food__item">
+                       <div class="food__item__desc">
+                       <h4>Macaron au chocolat d'exception</h4>
+                       <p>Et glace à la vanille de Madagascar</p>
+                      </div>
+                       <span class="food__price">22€</span>
+                       <div class="food__item--check">
+                          <i class="fas fa-check"></i>
+                       </div>
+                   </div>
+                   <div class="food__item">
+                       <div class="food__item__desc">
+                       <h4>Mousse au chocolat</h4>
+                       <p>Au piment d'espelette et à la truffe noire</p>
+                      </div>
+                       <span class="food__price">23€</span>
+                       <div class="food__item--check">
+                          <i class="fas fa-check"></i>
+                       </div>
+                   </div>
+                </div>
+            </section>
+
+            <section class="order">
+                <button>Commander</button>
+
+            </section>
+        </main>
+
+        <footer>
+            <h2>ohmyfood</h2>
+            <p>
+                <i class="fas fa-utensils"></i>
+                Proposer un restaurant
+            </p>
+            <p>
+                <i class="fas fa-hands-helping"></i>
+                Devenir partenaire
+            </p>
+            <p>Mentions légales</p>
+            <p>
+                <a href="mailto:robi.escoulen@gmail.com">Contact</a>
+            </p>
+        </footer>
+    </body>
+    </html>
 
 
 
 
-    </main>
-
-
-
-
-    <footer>
-        <h2>ohmyfood</h2>
-        <p>
-            <i class="fas fa-utensils"></i>
-            Proposer un restaurant
-        </p>
-        <p>
-            <i class="fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-            <a href="mailto:robi.escoulen@gmail.com">Contact</a>
-        </p>
-    </footer>
-
-    
-</body>
-
-
-</html>
