opti responsive et animation fleche retour

--- a/pages/restau-1.html
+++ b/pages/restau-1.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./../assets/favicon/site.webmanifest">
     <title>La palette du goût</title>
     <script src="https://kit.fontawesome.com/29cb4d7264.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
@@ -27,8 +31,9 @@
 
         <section class="restau__main">
             <div class="food">
-                <h3>Entrées</h3>
+                
                  <div class="food__menu">
+                    <h3>Entrées</h3>
                      <div class="food__item">
                          <div class="food__item__desc">
                          <h4>Fricassée d'escargot</h4>
@@ -60,8 +65,9 @@
                         </div>
                     </div>
                  </div>
-                 <h3>Plats</h3>
+
                  <div class="food__menu">
+                    <h3>Plats</h3>
                      <div class="food__item">
                          <div class="food__item__desc">
                          <h4>Filet de boeuf aux herbes</h4>
@@ -93,8 +99,9 @@
                         </div>
                     </div>
                 </div>
-                <h3>Desserts</h3>
+
                 <div class="food__menu">
+                    <h3>Desserts</h3>
                     <div class="food__item">
                         <div class="food__item__desc">
                         <h4>Paris-Brest</h4>
