--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 </head>
 
 <body>
+
+    <div class="loader">
+        <div>
+            <div>
+                <div>
+                    <div>
+                        <div>
+                            <div class=></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <header>
         <h1>ohmyfood</h1>
     </header>
