--- a/pages/restau-1.html
+++ b/pages/restau-1.html
@@ -21,7 +21,7 @@
     </a>
 
     <div class="photo">
-        <img src="../assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="../assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
     </div>
 
     <main>
@@ -133,13 +133,13 @@
                        </div>
                    </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <section class="order">
                 <button>Commander</button>
-
             </section>
-        </main>
+    </main>
 
         <footer>
             <h2>ohmyfood</h2>
