--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
                         <p>Ménilmontant</p>
                     </div>
                 </a>
-                <a href="#" class="card new">
+                <a href="./pages/restau-2.html" class="card new">
                     <img class="card__img" src="assets/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
                     <div class="card__description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./pages/restau-3.html" class="card">
                     <img class="card__img" src="assets/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"/>
                     <div class="card__description">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./pages/restau-4.html" class="card">
                     <img class="card__img" src="assets/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
                     <div class="card__description">
                         <h3>Le délice des sens</h3>
