--- a/index.html
+++ b/index.html
@@ -61,29 +61,41 @@
                 <a href="./pages/restau-1.html" class="card new">
                     <img class="card__img" src="assets/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
                     <div class="card__description">
+                        <div class="card__text">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
+                        </div>
+                        <div class="like"></div>
                     </div>
                 </a>
                 <a href="./pages/restau-2.html" class="card new">
                     <img class="card__img" src="assets/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
                     <div class="card__description">
+                        <div class="card__text">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
+                        </div>
+                        <div class="like"></div>
                     </div>
                 </a>
                 <a href="./pages/restau-3.html" class="card">
                     <img class="card__img" src="assets/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"/>
                     <div class="card__description">
+                        <div class="card__text">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
+                        </div>
+                        <div class="like"></div>
                     </div>
                 </a>
                 <a href="./pages/restau-4.html" class="card">
                     <img class="card__img" src="assets/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
                     <div class="card__description">
+                        <div class="card__text">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="like"></div>
                     </div>
                 </a>
             </div>
